@@ -17,62 +17,131 @@
     <title>Asynchronous ad tracking examples for snowplow.js</title>
 </head>
 
+<p>For each banner, viewing that banner fires an ad impression event and clicking it fires an ad click event.</p>
+
+<p>Click the first banner and the button that appears to fire an ad conversion event.</p>
+
 <body>
     <h1>Asynchronous ad tracking examples for snowplow.js</h1>
 
     <p>
-    <img src="images/banner-1.png">
-    Banner ID 23, campaign ID 12, advertiser ID 201, user ID 1fd819ffc7267757ba681ff5daa3007e
+    <img src="images/banner-1.png" onclick="banner1()">
+    Banner ID 23, zone ID 7, campaign ID 12, advertiser ID 201
     <!-- Snowplow starts plowing -->
     <script type="text/javascript">
-    window._snaq = window._snaq || [];
-    
-    window._snaq.push(['setAccount', 'd3rkrsqld9gmqf']); // Update to your account ID or CloudFront distribution subdomain
-    window._snaq.push(['trackImpression', '23', '12', '201', '1fd819ffc7267757ba681ff5daa3007e']);
 
-    (function() {
-    var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
-    sp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://d1fc8wv8zag5ca.cloudfront.net/0.13.1/sp.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sp, s);
-    })();
+    // Randomly generate tracker namespace to prevent clashes
+    var s1 = Math.random().toString(36).substring(2);
+
+    ;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+    p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+    };p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
+    n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","//d1fc8wv8zag5ca.cloudfront.net/2/sp.js","adTracker"));    
+
+    window.adTracker('newTracker', s1, 'd3rkrsqld9gmqf.cloudfront.net', {
+        'encodeBase64': false
+    });
+
+    window.adTracker('trackAdImpression:' + s1, 
+
+        '67965967893',      // impressionId
+        '',                 // costIfCpm - not applicable as the cost model for this ad is CPA
+        '23',               // bannerId
+        '7',                // zoneId
+        '201',              // advertiserId
+        'cpa',              // costModel - 'cpa', 'cpc', or 'cpm'
+        '12'                // campaignId
+    );
+
+    function banner1() {
+        window.adTracker('trackAdClick:' + s1, 
+
+            '12243253',                    // clickId
+            'http://www.example.com',      // targetUrl
+            '23',                          // bannerId
+            '7',                           // zoneId
+            '67965967893',                 // impressionId - the same as in trackAdImpression
+            '201',                         // advertiserId
+            'cpm',                         // costModel
+            '12'                           // campaignId
+        );
+
+        var button = document.createElement('button');
+        button.innerHTML = 'Click for an ad conversion';
+        document.body.appendChild(button);
+        button.onclick = function() {
+
+            window.adTracker('trackAdConversion:' + s1, 
+
+                '743560297',       // conversionId    
+                10,                // costIfCpa
+                'ecommerce',       // category
+                'purchase',        // action
+                '',                // property
+                99,                // initialValue - how much the conversion is initially worth
+                '201',             // advertiserId
+                'cpa',             // costModel
+                '12'               // campaignId
+            );
+
+        }
+    }
+
      </script>
     <!-- Snowplow stops plowing -->
     </p>
 
     <p>
-    <img src="images/banner-2.png">
-    Banner ID 127, no campaign or advertiser ID set, user ID 2de819ffc724367ba681ff5daa6777e
+    <img src="images/banner-2.png" onclick="banner2()">
+    Banner ID 127, no campaign or advertiser ID set
     <!-- Snowplow starts plowing -->
     <script type="text/javascript">
-    window._snaq = window._snaq || [];
-    
-    window._snaq.push(['setAccount', 'd3rkrsqld9gmqf']); // Update to your account ID or CloudFront distribution subdomain
-    window._snaq.push(['trackImpression', '127', '', '', '2de819ffc724367ba681ff5daa6777e']);
 
-    (function() {
-    var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
-    sp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://d1fc8wv8zag5ca.cloudfront.net/0.13.1/sp.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sp, s);
-    })();
+    var s2 = Math.random().toString(36).substring(2);
+
+    ;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+    p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+    };p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
+    n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","//d1fc8wv8zag5ca.cloudfront.net/2/sp.js","adTracker")); 
+
+    window.adTracker('newTracker', s2, 'd3rkrsqld9gmqf.cloudfront.net', {
+        'encodeBase64': false
+    });
+
+    window.adTracker('trackAdImpression:' + s2, '17320923496', 6.5, '127', '', '', 'cpm');
+
+    
+    function banner2() {
+        window.adTracker('trackAdClick:' + s2, '', 'http://www.example.com', '127', '', '17320923496', '', 'cpm');
+    }
+
      </script>
     <!-- Snowplow stops plowing -->
     </p>
 
     <p>
-    <img src="images/banner-3.png">
+    <img src="images/banner-3.png" onclick="banner3()">
     Banner ID 56ea2819ffc7da75f7e, no campaign, advertiser or user ID set
     <!-- Snowplow starts plowing -->
     <script type="text/javascript">
-    window._snaq = window._snaq || [];
-    
-    window._snaq.push(['setAccount', 'd3rkrsqld9gmqf']); // Update to your account ID or CloudFront distribution subdomain
-    window._snaq.push(['trackImpression', '56ea2819ffc7da75f7e', '', '', '']);
 
-    (function() {
-    var sp = document.createElement('script'); sp.type = 'text/javascript'; sp.async = true; sp.defer = true;
-    sp.src = ('https:' == document.location.protocol ? 'https' : 'http') + '://d1fc8wv8zag5ca.cloudfront.net/0.13.1/sp.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(sp, s);
-    })();
+    var s3 = Math.random().toString(36).substring(2);
+
+    ;(function(p,l,o,w,i,n,g){if(!p[i]){p.GlobalSnowplowNamespace=p.GlobalSnowplowNamespace||[];
+    p.GlobalSnowplowNamespace.push(i);p[i]=function(){(p[i].q=p[i].q||[]).push(arguments)
+    };p[i].q=p[i].q||[];n=l.createElement(o);g=l.getElementsByTagName(o)[0];n.async=1;
+    n.src=w;g.parentNode.insertBefore(n,g)}}(window,document,"script","//d1fc8wv8zag5ca.cloudfront.net/2/sp.js","adTracker")); 
+    
+    window.adTracker('newTracker', s3, 'd3rkrsqld9gmqf.cloudfront.net', {
+        'encodeBase64': false
+    });
+
+    window.adTracker('trackAdImpression:' + s3, '', '', '56ea2819ffc7da75f7e', '', '', 'cpc');
+
+    function banner3() {
+        window.adTracker('trackAdClick:' + s3, 0.2, 'http://www.example.com', '127', 'cpc');
+    }
+
      </script>
     <!-- Snowplow stops plowing -->
     </p>
