@@ -1,24 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<!-- 
- ! Copyright (c) 2012 Snowplow Analytics Ltd. All rights reserved.
- !
- ! This program is licensed to you under the Apache License Version 2.0,
- ! and you may not use this file except in compliance with the Apache License Version 2.0.
- ! You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.
- !
- ! Unless required by applicable law or agreed to in writing,
- ! software distributed under the Apache License Version 2.0 is distributed on an
- ! "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- ! See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.
- -->
-<html>
-<head>
-    <title>Synchronous ad serving examples for snowplow.js</title>
-</head>
-
-<body>
-    <b>Still to write</b>
-</body>
-
-</html>
