@@ -29,6 +29,8 @@ Linked the Technical Docs and Setup Guide images to the appropriate pages (#164)
 Made JS invocation tag part of the build process (#158)
 Fixed warnings generated by the Closure Compiler, thanks @steve-gh! (#170) 
 Added untracked files which should be ignored to .gitignore (#173)
+Removed ads/sync.html (#182)
+Updated ads/async.html (#183)
 
 Version 1.0.1 (2014-04-09)
 --------------------------
